Refactor: move logic from app.dart into new components/services
Move the input logic into a new component, the md5 logic into a new component,
and tie the two together with a new service.

--- a/lib/src/app.html
+++ b/lib/src/app.html
@@ -1,12 +1,3 @@
 <h1>Encoding Tools</h1>
-
-<form>
-    <label>
-        Input:
-        <input id='input' [ngModel]='input' (ngModelChange)='setInput($event)'>
-    </label>
-</form>
-
-<div>
-    Output: {{output}}
-</div>
+<transform-input></transform-input>
+<transform-md5></transform-md5>
