Start adding some styles
Add a navbar, content area and footer. Give gadgets a bit of styling.
Pick new fonts and make text non-selectable by default.

--- a/lib/src/app.html
+++ b/lib/src/app.html
@@ -1,2 +1,21 @@
-<h1>Encoding Tools</h1>
+<nav class='navbar navbar-expand-lg navbar-light bg-light border-bottom'>
+    <span class='navbar-brand'>Encoding Tools <i class='fas fa-wrench'></i></span>
+    <button class='navbar-toggler'
+            type='button'
+            data-toggle='collapse'
+            data-target='#navbarSupportedContent'
+            aria-controls='navbarSupportedContent'
+            aria-expanded='false'
+            aria-label='Toggle navigation'>
+      <span class='navbar-toggler-icon'></span>
+    </button>
+    <div class='collapse navbar-collapse'></div>
+</nav>
 <workspace></workspace>
+<div class='footer bg-light border-top'>
+  <span>
+    © 2018 ·
+    View On <i class='fab fa-github'></i> GitHub ·
+    Affero GPL
+  </span>
+</div>
