--- a/web/index.html
+++ b/web/index.html
@@ -4,12 +4,44 @@
     <title>Encoding Tools</title>
     <meta charset='UTF-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet'
-          href='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css'>
+    <link rel="stylesheet"
+          href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet"
+          href="https://use.fontawesome.com/releases/v5.0.9/css/all.css"
+          integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1"
+          crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Share+Tech|Share+Tech+Mono"
+          rel="stylesheet">
     <script defer src='main.dart' type='application/dart'></script>
     <script defer src='packages/browser/dart.js'></script>
+    <style type="text/css">
+      body {
+        font-family: 'Share Tech', sans-serif;
+        user-select: none;
+      }
+      pre {
+        font-family: 'Share Tech Mono', monospace;
+      }
+      .loader {
+        position: fixed;
+        top: 0; left: 0; bottom: 0; right: 0;
+        padding-top: 10rem;
+        font-size: 24pt;
+      }
+      .user-select {
+        user-select: text;
+        cursor: text;
+      }
+      .user-select-all {
+        user-select: all;
+        cursor: text;
+      }
+    </style>
   </head>
   <body>
-    <app>Loading Encoding Tools</app>
+    <app class='container-fluid'>
+      <div class='loader text-center bg-light'><i class='fas fa-spinner fa-pulse'></i> Loading…</div>
+    </app>
   </body>
 </html>
