Initial implementation of gadget drawer.
It's a fixed panel on the right side of the screen that shows the
kinds of gadgets available (currently just input and md5) and allows
you to drag a gadget into the workspace to instantiate it.

--- a/web/index.html
+++ b/web/index.html
@@ -8,8 +8,8 @@
           href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet"
-          href="https://use.fontawesome.com/releases/v5.0.9/css/all.css"
-          integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1"
+          href="https://pro.fontawesome.com/releases/v5.0.13/css/all.css"
+          integrity="sha384-oi8o31xSQq8S0RpBcb4FaLB8LJi9AT8oIdmS1QldR8Ui7KUQjNAnDlJjp55Ba8FG"
           crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Share+Tech|Share+Tech+Mono"
           rel="stylesheet">
