--- a/web/index.html
+++ b/web/index.html
@@ -8,8 +8,8 @@
           href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet"
-          href="https://pro.fontawesome.com/releases/v5.0.13/css/all.css"
-          integrity="sha384-oi8o31xSQq8S0RpBcb4FaLB8LJi9AT8oIdmS1QldR8Ui7KUQjNAnDlJjp55Ba8FG"
+          href="https://use.fontawesome.com/releases/v5.1.0/css/all.css"
+          integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt"
           crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Share+Tech|Share+Tech+Mono"
           rel="stylesheet">
@@ -20,7 +20,7 @@
   <body>
     <div id='app'>
       <div class='loader text-center bg-light'>
-        <i class='fas fa-spinner fa-pulse'></i> Loading…
+        <i class='fas fa-wrench fa-spin'></i> Loading…
       </div>
     </app>
   </body>
