--- a/web/index.html
+++ b/web/index.html
@@ -3,6 +3,8 @@
   <head>
     <title>Encoding Tools</title>
     <meta charset='UTF-8'>
+    <meta name='keywords' content='encoder decoder base64 hex url html entities md5 sha1 sha2'>
+    <meta name='description' content='Encoding tools is a graphical utility for performing common encoding, decoding, and hashing procedures on text or binary data.'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel="stylesheet"
           href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
