Fix tracking code

--- a/web/index.html
+++ b/web/index.html
@@ -30,6 +30,6 @@
       <div class='loader text-center bg-light'>
         <i class='fas fa-wrench fa-spin'></i> Loading…
       </div>
-    </app>
+    </div>
   </body>
 </html>
