--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,8 @@
           href='./global.css'>
     <link rel='stylesheet'
           href='./build/bundle.css'>
-    <script defer
+    <script async
+            defer
             src='./build/bundle.js'></script>
 </head>
 
