Still trying to fix Google Analytics

--- a/public/index.html
+++ b/public/index.html
@@ -51,6 +51,14 @@
     <script async
             defer
             src='./build/bundle.js'></script>
+    <script>
+        dataLayer = window.dataLayer || [];
+        function gtag() {
+            dataLayer.push(arguments);
+        };
+        gtag("js", new Date());
+        gtag("config", "G-HD5WSRFT6N");
+    </script>
 </head>
 
 <body>
